fluxcd/apps/overlays/production/pve-cluster-external/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pve-cluster-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Infrastructure (Aryll's Lookout🔭)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "pve.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pve-cluster-proxy
          port: 8006
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pbs-cluster-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Infrastructure (Aryll's Lookout🔭)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "pbs.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pbs-cluster
          port: 8007
